# trajognize

./: README.md  pyproject.toml  requirements.txt  setup.py
examples/: colorids.xml  project_settings.py
test/: batch_trajognize.py  batch_trajognize_stat.py  check_barcode_distributions.py  check_blob_distributions.py  check_cage_distributions.py  check_parse_blob_file.py  check_trajognize_results.py  check_walls.py  convert_barcode_to_srt.py  print_barcode_file_frame.py  test_corr.py  test_foodobj.py
trajognize/: __init__.py  algo.py  algo_barcode.py  algo_blob.py  algo_conflict.py  algo_trajectory.py  init.py  main.py  output.py  parse.py  project.py  settings.py  util.py  version.py
trajognize/calc/: __init__.py  calc_bodymass.py  calc_dailyallkindofthings.py  calc_dailyvalidtimes.py  calc_dist24hobj_avgfood.py  calc_heatmap_corroutput.py  calc_heatmap_dailyoutput.py  calc_heatmapdiff.py  calc_indivparams.py  calc_motionmap_corroutput.py  hierarchy.py  reorder_matrixfile_eades.py
trajognize/corr/: __init__.py  collect_good_params.py  corr.py  extract_group_descriptors.py  good_params.py  util.py
trajognize/plot/: __init__.py  autorun.sh  create_symlinks.py  filter_plot_output.py  gnucall_matrixmap_0_commoncbrange.gnu  gnucall_matrixmap_1_init.gnu  gnucall_matrixmap_2_plot.gnu  plot.py  plot_aa.py  plot_accdist.py  plot_avgfooddist24hobj.py  plot_bodymass.py  plot_butthead.py  plot_dailyfqobj.py  plot_dailyobj.py  plot_dailyranks.py  plot_dist24h.py  plot_dist24hobj.py  plot_distfromwall.py  plot_fqfood.py  plot_fqobj.py  plot_fqwhilef.py  plot_graph.py  (+9 more)
(+13 files in other folders)
